Source/WebCore/rendering/RenderObject.cpp
@@ -1527,38 +1527,40 @@ void RenderObject::destroy()
     delete this;
 }
 
+static RenderLayer* enclosingFrameRenderLayer(RenderObject& renderObject)
+{
+    auto* owner = renderObject.frame().ownerElement();
+    if (!owner)
+        return nullptr;
+
+    auto* frameOwnerRenderer = owner->renderer();
+    return frameOwnerRenderer ? frameOwnerRenderer->enclosingLayer() : nullptr;
+}
+
+static RenderLayer* parentLayerCrossingFrameBoundaries(RenderLayer& layer)
+{
+    if (auto* parentLayer = layer.parent())
+        return parentLayer;
+
+    return enclosingFrameRenderLayer(layer.renderer());
+}
+
 bool RenderObject::isTransparentOrFullyClippedRespectingParentFrames() const
 {
     static const double minimumVisibleOpacity = 0.01;
 
     float currentOpacity = 1;
-    auto* layer = enclosingLayer();
-    while (layer) {
-        auto& layerRenderer = layer->renderer();
-        auto& style = layerRenderer.style();
-        if (auto* box = layer->renderBox()) {
-            bool isOverflowHidden = style.overflowX() == Overflow::Hidden || style.overflowY() == Overflow::Hidden;
-            if (isOverflowHidden && !box->isDocumentElementRenderer() && box->contentSize().isEmpty())
-                return true;
-        }
-        currentOpacity *= style.opacity();
+    for (auto* layer = enclosingLayer(); layer; layer = parentLayerCrossingFrameBoundaries(*layer)) {
+        currentOpacity *= layer->renderer().style().opacity();
         if (currentOpacity < minimumVisibleOpacity)
             return true;
-
-        auto* parentLayer = layer->parent();
-        if (!parentLayer) {
-            if (!is<RenderView>(layerRenderer))
-                return false;
-
-            auto& enclosingFrame = downcast<RenderView>(layerRenderer).view().frame();
-            if (enclosingFrame.isMainFrame())
-                return false;
-
-            if (auto *frameOwnerRenderer = enclosingFrame.ownerElement()->renderer())
-                parentLayer = frameOwnerRenderer->enclosingLayer();
-        }
-        layer = parentLayer;
     }
+
+    for (auto* layer = enclosingLayer(); layer; layer = enclosingFrameRenderLayer(layer->renderer())) {
+        if (layer->selfClipRect().isEmpty())
+            return true;
+    }
+
     return false;
 }
 
